Bug 60937 - CONFIGURATION: Quickstarter opens Template Manager
Summary: CONFIGURATION: Quickstarter opens Template Manager
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: abstatic
URL:
Whiteboard: target:6.1.0
Keywords: difficultyBeginner, easyHack, skillCpp, topicUI
Depends on:
Blocks: Quickstarter
  Show dependency treegraph
 
Reported: 2013-02-16 02:10 UTC by Dennis Gary
Modified: 2018-09-21 15:17 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Gary 2013-02-16 02:10:18 UTC
When Quickstarter is left click it opens Template Manager box.  Previously, and I prefer -- it opened Documents on my computer.

This I preferred since it was one less step in getting to the document I want to work on.  Also I don't use templates as a rule.

Is there a way to install or modify Quickstarter the way I prefer it -- going directly to Documents?
Comment 1 Rainer Bielefeld Retired 2013-02-16 10:31:37 UTC
@reporter:
Thank you for your report – unfortunately important information is missing.
May be hints on <http://wiki.documentfoundation.org/BugReport> will help you to find out what information will be useful to reproduce your problem? 
Please add all information requested in following:
- add information 
  -- WHY do you believe it's unexpected (cite Help or Documentation!)
  -- concerning your Operating System (Version, Distribution, Language)
  -- concerning your LibO localization (UI language, Locale setting)
  –- Libo settings that might be related to your problems 
  –- Whether your problem persists when you renamed your user profile 
     before you launch LibO (please see
     <https://wiki.documentfoundation.org/UserProfile#User_profile_location>)
Comment 2 Dennis Gary 2013-02-16 18:39:46 UTC
On 2/16/2013 2:31 AM, bugzilla-daemon@freedesktop.org wrote:
> Rainer Bielefeld <mailto:LibreOffice@bielefeldundbuss.de> changed bug 
> 60937 <https://bugs.freedesktop.org/show_bug.cgi?id=60937>
> What 	Removed 	Added
> Status 	UNCONFIRMED 	NEEDINFO
> CC 		LibreOffice@bielefeldundbuss.de
> Summary 	Quickstarter 	CONFIGURATION: Quickstarter opens Template Manager
> Ever confirmed 		1
>
> *Comment # 1 <https://bugs.freedesktop.org/show_bug.cgi?id=60937#c1> 
> on bug 60937 <https://bugs.freedesktop.org/show_bug.cgi?id=60937> from 
> Rainer Bielefeld <mailto:LibreOffice@bielefeldundbuss.de> *
> @reporter:
> Thank you for your report – unfortunately important information is missing.
> May be hints on <http://wiki.documentfoundation.org/BugReport> will help you to
> find out what information will be useful to reproduce your problem?
> Please add all information requested in following:
> - add information
>    -- WHY do you believe it's unexpected (cite Help or Documentation!)
>    -- concerning your Operating System (Version, Distribution, Language)
>    -- concerning your LibO localization (UI language, Locale setting)
>    –- Libo settings that might be related to your problems
>    –- Whether your problem persists when you renamed your user profile
>       before you launch LibO (please see
>       <https://wiki.documentfoundation.org/UserProfile#User_profile_location>)
> ------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You reported the bug.
>
Quickstarter brings up TEMPLATES only when I installed LibreOffice 4.  
Previously I was using LibreOffice 3.6.5.2 where the box on left click 
included TEMPLATES & DOCUMENTS.

I am using Windows 8 64 bit.  US English

I did a clean install of LibreOffice 4.  Not only did the Quickstarter 
behave differently, but the whole application slowed down in regard to 
loading of documents, etc.

So I did a clean install of LibreOffice 3.6.5.2 and the Quickstarter 
works as it should and the whole program is again super fast.

  I have been using Open Office since the days it was an Oracle 
product.  I then switched to Apache but its spell check did not work.  
At that point I switched to Libre 3.6.5.2.

As a rule of the thumb, I generally use the latest version.  But now I 
am back to 3.6.5.2,

I hope the above will be of help.  I don't know I want to get involved 
much further in the technical aspects of this -- re: changing profile.

Dennis Gary
Comment 3 Harald Koester 2013-02-19 17:20:08 UTC
Reproduced under Win 7. 

Current behaviour quickstarter:
Single left click: No reaction
Double left click: Opens new(ver. 4.0.0) template manager. 
Right click: Opens menu with several items (new documents, templates, open document,..).

Expected behaviour with double left quick: Display Open document dialog. 
Rationale: TMO in most cases a user likes to open an existing document and not to create a new document based on a template.

On the german user mailing there has been the same complaint.

Further enhancement: There should be a possibiliy to open the recent documents   by mouse clicks on the quickstarter.
Comment 4 Cédric Bosdonnat 2013-03-11 14:57:31 UTC
The "Templates and Document" dialog has been replaced by the new template manager. It would be good to check with the design team, what to do next for this.

Adding Mirek from the design team as CC.
Comment 5 Tin Man 2013-03-11 22:54:18 UTC
(In reply to comment #4)
> The "Templates and Document" dialog has been replaced by the new template
> manager. It would be good to check with the design team, what to do next for
> this.

If I understand the correctly, the problem is not with the new Template manager, but simply with a change in Quickstarter behavior -- it now launches the manager when it used to launch the Open dialog. Though I don't use quickstarter myself, I agree with Dennis and Harald that the old behavior is more sensible, as creating new documents can be left up to taskbar icons.
Comment 6 Cor Nouws 2014-02-03 20:45:42 UTC
Hi guys & girls,

Looking at the new start center.. what is the current opinion on this ?

thanks!
Cor
Comment 7 Harald Koester 2014-02-04 11:01:03 UTC
Hi Cor,

the problem still exists in 4.2.0 as I described it in Comment 3. There is no relationsship to the new start center. 

The problem exists since Version 4.0.0. In this versions a double click opens the "Template Manager". In older Versions than 4.0.0 a double click opens the dialogue "Templates and Documents". And then you have to click on "Organize.." to open the Template Manager. I still expect, that with a double (or for my part also single) click a "Open Document" dialogue is displayed.

Cheers Harald
Comment 8 Joel Madero 2015-05-02 15:43:32 UTC Comment hidden (obsolete)
Comment 9 Richard 2015-05-10 11:34:08 UTC
Bug still present.

LO 4.4.3.2

Win 7 Ultimate
Comment 10 Marina Latini (SUSE) 2016-05-13 10:33:20 UTC
Confirmed on:

* Version: 5.1.3.2                                                                                                                                                                                                                           
* Build ID: 644e4637d1d8544fd9f56425bd6cec110e49301b                                                                                                                                                                                         
* Thread CPU: 4; Version SO: Windows 6.1; Render: default;                                                                                                                                                                               
* Locale: it-IT (it_IT)                                                                                                                                                                                                                      
* OS: Windows 7 Home Premium SP1 x86

as described in comment 3:

Current behaviour quickstarter:
Single left click: No reaction
Double left click: Opens new(ver. 4.0.0) template manager. 
Right click: Opens menu with several items (new documents, templates, open document,..).

Note: Changed hardware information to "All", "Windows (All)"
Comment 11 Samuel Mehrbrodt 2016-06-21 13:34:18 UTC
(In reply to Marina Latini from comment #10)
> Current behaviour quickstarter:
> Single left click: No reaction
> Double left click: Opens new(ver. 4.0.0) template manager. 

@ux-advise: What should happen on single/double click?
I'd suggest they both should do the same, whatever it is.
Maybe open the start center?
Comment 12 Heiko Tietze 2016-06-21 14:13:19 UTC
(In reply to Samuel Mehrbrodt (CIB) from comment #11)
> @ux-advise: What should happen on single/double click?
> I'd suggest they both should do the same, whatever it is.
> Maybe open the start center?

There is no consistent behavior on Windows. Left/double/right click:
* Taskmanager (Microsoft): nothing/open task manager/show menu (default="restore") 
* Lync (Microsoft): Show menu/Open chat contacts/show menu
* Synaptics: Show menu/open touchpad properties (default menu entry)/show menu
* Google Hangouts: Open hangouts dialog/-/nothing

Most likely double click is not used on most other OS/DE. So my suggestion is:
Left click: Open start center (with templates being one click away; this feature wasn't implemented at the older comments)
Right click: Show menu (as today)
Comment 13 Samuel Mehrbrodt 2016-06-22 12:54:41 UTC
(In reply to Heiko Tietze from comment #12)
> Left click: Open start center (with templates being one click away; this
> feature wasn't implemented at the older comments)
> Right click: Show menu (as today)

EasyHack. Code pointer: http://opengrok.libreoffice.org/xref/core/sfx2/source/appl/shutdowniconw32.cxx#307
Comment 14 abstatic 2018-01-16 13:11:13 UTC
Hello,

I would like to work on this bug. I am a beginner, but I have successfully set up LO on my machine (Win10 64bit environment)

I will be looking at the above code pointer and try to fix this.
Comment 15 Heiko Tietze 2018-01-16 14:07:13 UTC
(In reply to abstatic from comment #14)
> I will be looking at the above code pointer and try to fix this.

Great, looking forward your patch. Feel free to ask on IRC; more basic info here https://wiki.documentfoundation.org/Development
Comment 16 abstatic 2018-01-17 07:01:10 UTC
I have submitted my patch at https://gerrit.libreoffice.org/#/c/48026/ 

Is it okay ?
Comment 17 Commit Notification 2018-01-17 10:16:21 UTC
Abhishek Shrivastava committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=69645183237be13e32fcdeb7b10f1ca04c3198cc

tdf#60937 Open Start Center on Quickstarter left-click

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Harald Koester 2018-09-21 15:17:00 UTC
Checked with versions 6.0.6 and 6.1.1 (64 bit, Win 10). 

Version 6.0.6: 
Single left click: No reaction
Double left click: Opens template manager.

Version 6.1.1:
Single left click and Double left click: Open start center.

6.6.1 works as expected now. Hence bug closed.
Thanks for fixing.