tdf#60937 Open Start Center on Quickstarter left-click

This patch modifies the click actions on quickstarter on Windows.
Earlier a left double click opened up Template Manager, which wasn't
user friendly.

Now on single left click on quickstarter icon it opens up Start Center

Change-Id: I23e56d5d1bb3f4bfc060149dec60de30ae1207cd
Reviewed-on: https://gerrit.libreoffice.org/48026
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Jenkins <ci@libreoffice.org>